--- a/global-styles.css
+++ b/global-styles.css
@@ -4,6 +4,11 @@
   padding: 0 1rem 1rem 0;
 }
 
+.scroll-container {
+  overflow-y: auto;
+  height: 85vh;
+}
+
 @media (min-width: 1280px) {
   .card {
     margin: 1rem 20rem;
